[project]
name = "SAM-2"
version = "1.0+aiefork"
description = "SAM2 (fork)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]
numpy = [
    "numpy>=1.24.4",
]

[tool.setuptools]
packages = { find = { exclude = ["notebooks"] } }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"